Implement generic A-Star search algorithm

--- a/AdventOfCode2019.vcxproj.filters
+++ b/AdventOfCode2019.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="intcode.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="search_algorithms.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
