--- a/AdventOfCode2019.vcxproj
+++ b/AdventOfCode2019.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="input_utilities.hpp" />
     <ClInclude Include="intcode.hpp" />
+    <ClInclude Include="search_algorithms.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
