State day 18 part 2 as a shortest-path problem. (needs MSVC 15.9 now)

--- a/AdventOfCode2019.vcxproj
+++ b/AdventOfCode2019.vcxproj
@@ -154,6 +154,8 @@
   <ItemGroup>
     <ClInclude Include="input_utilities.hpp" />
     <ClInclude Include="intcode.hpp" />
+    <ClInclude Include="itertools\product.hpp" />
+    <ClInclude Include="itertools\zip.hpp" />
     <ClInclude Include="search_algorithms.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
